RESOLVED FIXED160517
Object.getOwnPropertyNames() on NamedNodeMap fails to return named properties
https://bugs.webkit.org/show_bug.cgi?id=160517
Summary Object.getOwnPropertyNames() on NamedNodeMap fails to return named properties
Chris Dumez
Reported 2016-08-03 11:49:17 PDT
Object.getOwnPropertyNames() on NamedNodeMap fails to return named properties: - https://dom.spec.whatwg.org/#dom-namednodemap-item The spec says: A NamedNodeMap object’s supported property names are the return value of running these steps: 1. Let names be the qualified names of the attributes in this NamedNodeMap object’s attribute list, with duplicates omitted, in order. 2. If this NamedNodeMap object’s element is in the HTML namespace and its node document is an HTML document, then for each name in names, run these substeps: 1. Let lowercaseName be name, converted to ASCII lowercase. 2. If lowercaseName is not equal to name, remove name from names. 3. Return names.
Attachments
Patch (7.21 KB, patch)
2016-08-03 11:51 PDT, Chris Dumez
no flags
Patch (7.25 KB, patch)
2016-08-03 11:55 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-08-03 11:51:12 PDT
Chris Dumez
Comment 2 2016-08-03 11:55:40 PDT
WebKit Commit Bot
Comment 3 2016-08-03 22:28:20 PDT
Comment on attachment 285257 [details] Patch Clearing flags on attachment: 285257 Committed r204115: <http://trac.webkit.org/changeset/204115>
WebKit Commit Bot
Comment 4 2016-08-03 22:28:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.