Object.getOwnPropertyNames() on NamedNodeMap fails to return named properties https://bugs.webkit.org/show_bug.cgi?id=160517

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline several W3C tests now that more checks are passing.

* web-platform-tests/dom/collections/namednodemap-supported-property-names-expected.txt:
* web-platform-tests/dom/nodes/attributes-expected.txt:

Source/WebCore:

Object.getOwnPropertyNames() on NamedNodeMap should return named
properties' names as per:
- https://dom.spec.whatwg.org/#dom-namednodemap-item

No new tests, rebaselined existing tests.

* dom/NamedNodeMap.cpp:
(WebCore::NamedNodeMap::supportedPropertyNames):
* dom/NamedNodeMap.h:


Canonical link: https://commits.webkit.org/178661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204115 268f45cc-cd09-0410-ab3c-d52691b4dbfc