Source/WebCore/dom/NamedNodeMap.h
@@ -53,7 +53,7 @@ public:
 
     RefPtr<Attr> getNamedItem(const AtomicString&) const;
     RefPtr<Attr> removeNamedItem(const AtomicString& name, ExceptionCode&);
-    Vector<AtomicString> supportedPropertyNames();
+    Vector<String> supportedPropertyNames();
 
     RefPtr<Attr> getNamedItemNS(const AtomicString& namespaceURI, const AtomicString& localName) const;
     RefPtr<Attr> removeNamedItemNS(const AtomicString& namespaceURI, const AtomicString& localName, ExceptionCode&);
